--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,909 @@
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+:root {
+  --mh-primary: #72c02c;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #555555;
+  background-color: #fff;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+a {
+  color: #0d6efd;
+  text-decoration: none;
+  transition: ease all 0.3s;
+}
+a:hover {
+  color: #72c02c;
+}
+
+h6,
+.h6,
+h5,
+.h5,
+h4,
+.h4,
+h3,
+.h3,
+h2,
+.h2,
+h1,
+.h1 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+h1,
+.h1 {
+  font-size: calc(1.375rem + 1.5vw);
+}
+@media (min-width: 1200px) {
+  h1,
+  .h1 {
+    font-size: 2.5rem;
+  }
+}
+
+h2,
+.h2 {
+  font-size: calc(1.325rem + 0.9vw);
+}
+@media (min-width: 1200px) {
+  h2,
+  .h2 {
+    font-size: 2rem;
+  }
+}
+
+h3,
+.h3 {
+  font-size: calc(1.3rem + 0.6vw);
+}
+@media (min-width: 1200px) {
+  h3,
+  .h3 {
+    font-size: 1.75rem;
+  }
+}
+
+h4,
+.h4 {
+  font-size: calc(1.275rem + 0.3vw);
+}
+@media (min-width: 1200px) {
+  h4,
+  .h4 {
+    font-size: 1.5rem;
+  }
+}
+h5,
+.h5 {
+  font-size: 1.25rem;
+}
+
+h6,
+.h6 {
+  font-size: 1rem;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+
+img,
+svg {
+  vertical-align: middle;
+}
+.hover-primary.m-border.rounded img {
+  min-height: 200px;
+  width: 100%;
+  display: block;
+  background: #f1f1f1;
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+.small {
+  font-size: 0.875em;
+}
+
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+.mb-4 {
+  margin-bottom: 1.5rem !important;
+}
+.m-mt-30 {
+  margin-top: 4rem !important;
+}
+.mx-auto {
+  margin: auto;
+}
+/* Padding */
+.m-py-100 {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.display-5 {
+  font-size: calc(1.425rem + 2.1vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
+@media (min-width: 1200px) {
+  .display-5 {
+    font-size: 3rem;
+  }
+}
+
+/* Container */
+.container,
+.container-fluid {
+  width: 100%;
+  padding-right: var(--bs-gutter-x, 0.75rem);
+  padding-left: var(--bs-gutter-x, 0.75rem);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+
+/* Row */
+
+.row {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(var(--bs-gutter-y) * -1);
+  margin-right: calc(var(--bs-gutter-x) / -2);
+  margin-left: calc(var(--bs-gutter-x) / -2);
+}
+.row > * {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) / 2);
+  padding-left: calc(var(--bs-gutter-x) / 2);
+  margin-top: var(--bs-gutter-y);
+}
+
+/* Col */
+.col {
+  flex: 1 0 0%;
+}
+
+/* Gutter */
+.g-0,
+.gx-0 {
+  --bs-gutter-x: 0;
+}
+.g-3,
+.gx-3 {
+  --bs-gutter-x: 2rem;
+}
+
+.g-3,
+.gy-3 {
+  --bs-gutter-y: 2rem;
+}
+@media (min-width: 768px) {
+  .col-md {
+    flex: 1 0 0%;
+  }
+
+  .row-cols-md-auto > * {
+    flex: 0 0 auto;
+    width: auto;
+  }
+
+  .row-cols-md-1 > * {
+    flex: 0 0 auto;
+    width: 100%;
+  }
+
+  .row-cols-md-2 > * {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+
+  .row-cols-md-3 > * {
+    flex: 0 0 auto;
+    width: 33.3333333333%;
+  }
+
+  .row-cols-md-4 > * {
+    flex: 0 0 auto;
+    width: 25%;
+  }
+
+  .row-cols-md-5 > * {
+    flex: 0 0 auto;
+    width: 20%;
+  }
+
+  .row-cols-md-6 > * {
+    flex: 0 0 auto;
+    width: 16.6666666667%;
+  }
+
+  .col-md-auto {
+    flex: 0 0 auto;
+    width: auto;
+  }
+
+  .col-md-1 {
+    flex: 0 0 auto;
+    width: 8.3333333333%;
+  }
+
+  .col-md-2 {
+    flex: 0 0 auto;
+    width: 16.6666666667%;
+  }
+
+  .col-md-3 {
+    flex: 0 0 auto;
+    width: 25%;
+  }
+
+  .col-md-4 {
+    flex: 0 0 auto;
+    width: 33.3333333333%;
+  }
+
+  .col-md-5 {
+    flex: 0 0 auto;
+    width: 41.6666666667%;
+  }
+
+  .col-md-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+
+  .col-md-7 {
+    flex: 0 0 auto;
+    width: 58.3333333333%;
+  }
+
+  .col-md-8 {
+    flex: 0 0 auto;
+    width: 66.6666666667%;
+  }
+
+  .col-md-9 {
+    flex: 0 0 auto;
+    width: 75%;
+  }
+
+  .col-md-10 {
+    flex: 0 0 auto;
+    width: 83.3333333333%;
+  }
+
+  .col-md-11 {
+    flex: 0 0 auto;
+    width: 91.6666666667%;
+  }
+
+  .col-md-12 {
+    flex: 0 0 auto;
+    width: 100%;
+  }
+}
+
+@media (min-width: 992px) {
+  .col-lg {
+    flex: 1 0 0%;
+  }
+
+  .col-lg-1 {
+    flex: 0 0 auto;
+    width: 8.3333333333%;
+  }
+
+  .col-lg-2 {
+    flex: 0 0 auto;
+    width: 16.6666666667%;
+  }
+
+  .col-lg-3 {
+    flex: 0 0 auto;
+    width: 25%;
+  }
+
+  .col-lg-4 {
+    flex: 0 0 auto;
+    width: 33.3333333333%;
+  }
+
+  .col-lg-5 {
+    flex: 0 0 auto;
+    width: 41.6666666667%;
+  }
+
+  .col-lg-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+
+  .col-lg-7 {
+    flex: 0 0 auto;
+    width: 58.3333333333%;
+  }
+
+  .col-lg-8 {
+    flex: 0 0 auto;
+    width: 66.6666666667%;
+  }
+
+  .col-lg-9 {
+    flex: 0 0 auto;
+    width: 75%;
+  }
+
+  .col-lg-10 {
+    flex: 0 0 auto;
+    width: 83.3333333333%;
+  }
+
+  .col-lg-11 {
+    flex: 0 0 auto;
+    width: 91.6666666667%;
+  }
+
+  .col-lg-12 {
+    flex: 0 0 auto;
+    width: 100%;
+  }
+}
+
+/* Hover Primary */
+
+.hover-primary:hover .m-color-main {
+  color: var(--mh-primary);
+}
+
+/* Font Color */
+
+.m-color-main {
+  color: #1c1e21;
+}
+
+/* Border Radius */
+.rounded {
+  border-radius: 4px;
+}
+.rounded-top {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.rounded-circle {
+  border-radius: 50% !important;
+}
+/* Border */
+.m-border {
+  border: 1px solid #eee;
+}
+
+.m-border-top {
+  border-top: 1px solid #eee;
+}
+
+/*
+* Flex align items
+*/
+
+.d-block {
+  display: block;
+}
+.d-flex {
+  display: flex !important;
+}
+.align-items-center {
+  align-items: center !important;
+}
+.align-content-between {
+  align-content: space-between !important;
+}
+.justify-content-center {
+  justify-content: center !important;
+}
+
+.justify-content-between {
+  justify-content: space-between !important;
+}
+
+/* Buttons */
+
+.btn {
+  display: inline-block;
+  background: #e4e6eb;
+  padding: 8px 10px;
+  border-radius: 3px;
+  font-size: 16px;
+  color: #555;
+}
+
+.btn:hover {
+  background-color: #d8dadf;
+  color: #1c1e21;
+}
+
+.m-pa-3 {
+  padding: 1rem !important;
+}
+
+.m-px-3 {
+  padding-right: 1rem !important;
+  padding-left: 1rem !important;
+}
+
+.m-py-2 {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
+}
+
+.portfolio-nav,
+.about-nav {
+  margin-bottom: 1rem;
+}
+.portfolio-nav ul,
+.about-nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+.portfolio-nav ul li,
+.about-nav ul li {
+  display: inline-block !important;
+}
+
+.portfolio-nav ul li a,
+.about-nav ul li {
+  display: block;
+  font-size: 0.875rem;
+  color: #555;
+  text-decoration: none;
+  padding: 0.25rem 0.5rem;
+  border: 1px solid #eee;
+  margin-right: 5px;
+  margin-bottom: 8px;
+  border-radius: 0.2rem;
+  transition: ease all 0.3s;
+  cursor: pointer;
+}
+
+.portfolio-nav ul li a:hover,
+.about-nav ul li:hover,
+.portfolio-nav ul li a.active,
+.about-nav ul li.active {
+  background-color: var(--mh-primary);
+  color: #fff;
+  border-color: var(--mh-primary);
+}
+
+/* Buttons */
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-primary {
+  color: #fff !important;
+  background-color: var(--mh-primary);
+  border-color: var(--mh-primary);
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #8cd54a;
+  border-color: #8cd54a;
+}
+
+.btn-check:focus + .btn-primary,
+.btn-primary:focus {
+  color: #fff;
+  background-color: #8cd54a;
+  border-color: #8cd54a;
+  box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
+}
+.btn-secondary {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+.btn-secondary:hover {
+  color: #fff;
+  background-color: #5c636a;
+  border-color: #565e64;
+}
+.btn-check:focus + .btn-secondary,
+.btn-secondary:focus {
+  color: #fff;
+  background-color: #5c636a;
+  border-color: #565e64;
+  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+}
+
+.btn-sm {
+  padding: 0.25rem 0.5rem;
+  font-size: 0.875rem;
+  border-radius: 0.2rem;
+}
+
+.shadow {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+}
+.shadow-sm {
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
+}
+
+/*********************
+* Header Style
+*********************/
+.header {
+  padding: 1rem 0;
+}
+@media (min-width: 992px) {
+  .header {
+    padding: 1.25rem;
+  }
+}
+.header .logo h1 {
+  font-size: 22px;
+  font-weight: 400;
+  margin: 0;
+  width: 55px;
+  height: 55px;
+  background: #333;
+  border-radius: 4px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  transition: ease all 0.3s;
+  justify-content: center;
+}
+
+.header .logo h1:hover {
+  background: var(--mh-primary);
+}
+
+/* Mobile Logo */
+#mobile-logo {
+  position: absolute;
+  top: 0;
+  width: 260px;
+}
+#mobile-logo h1 {
+  font-size: 22px;
+  font-weight: 400;
+  margin: 20px auto;
+  width: 55px;
+  height: 55px;
+  background: #333;
+  border-radius: 4px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  transition: ease all 0.3s;
+  justify-content: center;
+}
+#mobile-logo img {
+  width: 120px;
+}
+
+/* Main Menu Logo */
+#main-menu ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+#main-menu ul li {
+  display: inline-block;
+}
+
+#main-menu ul li a {
+  color: #555;
+  text-decoration: none;
+  padding: 10px;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  vertical-align: middle;
+}
+
+#main-menu ul li a:hover,
+#main-menu ul li a.active {
+  color: var(--mh-primary);
+}
+
+/* Mobile Nav */
+#mobile-nav {
+  position: fixed;
+  top: 0;
+  padding-top: 70px;
+  bottom: 0;
+  z-index: 998;
+  background: #f1f1f1;
+  left: -260px;
+  width: 260px;
+  overflow-y: auto;
+  transition: 0.4s;
+}
+
+#mobile-nav ul li {
+  display: block;
+}
+
+#mobile-nav ul li a {
+  display: block;
+}
+
+#mobile-nav ul {
+  margin: 0;
+  padding: 30px;
+  list-style: none;
+}
+
+#mobile-nav > ul li a {
+  display: block;
+  color: #555;
+  font-weight: 400;
+  text-decoration: none;
+  margin-bottom: 12px;
+  text-align: center;
+  border: 1px solid #ddd;
+  padding: 6px;
+  border-radius: 0.25rem;
+}
+#mobile-nav > ul li a.active {
+  color: var(--mh-primary);
+}
+
+#mobile-body-overly {
+  width: 100%;
+  height: 100%;
+  z-index: 997;
+  top: 0;
+  left: 0;
+  position: fixed;
+  background: rgba(255, 255, 255, 0.7);
+  display: none;
+}
+
+/* Mobile Nav body classes */
+body.mobile-nav-active {
+  overflow: hidden;
+}
+
+body.mobile-nav-active #mobile-nav {
+  left: 0;
+}
+
+/* Mobile Menu Trigger */
+.menu-trigger {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  #main-menu {
+    display: none;
+  }
+
+  .menu-trigger {
+    display: block;
+    z-index: 999999;
+    color: #555;
+    font-size: 27px;
+  }
+  .contact-info {
+    padding: 10px;
+    font-size: 13px;
+  }
+}
+
+/*********************
+* Footer Style
+*********************/
+
+.footer {
+  text-align: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.footer ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.footer ul li {
+  display: inline-block;
+}
+.footer img {
+  width: 25px;
+  height: 25px;
+  display: block;
+  transition: ease all 0.2s;
+  opacity: 0.8;
+  filter: gray;
+  -webkit-filter: grayscale(100%);
+  cursor: pointer;
+}
+
+.footer ul li a:hover img {
+  opacity: 1;
+  -webkit-filter: grayscale(0);
+}
+
+.footer ul li a {
+  margin: 5px;
+  display: block;
+}
+
+#mobile-footer {
+  bottom: 0;
+  position: absolute;
+  width: 260px;
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+#mobile-footer ul {
+  padding: 0;
+}
+
+#mobile-footer ul li {
+  display: inline-block;
+}
+
+#mobile-footer ul li img {
+  width: 20px;
+  height: 20px;
+}
+
+#mobile-footer p {
+  font-size: 14px;
+}
+
+/* About */
+.about-thumb {
+  width: 220px;
+  margin: auto;
+  text-align: center;
+  border: 2px solid #ddd;
+  border-radius: 50%;
+  padding: 4px;
+}
+.tabcontent {
+  display: none;
+  animation: fadeEffect 0.3s; /* Fading effect takes 1 second */
+}
+
+.tabcontent h3 {
+  font-size: 1rem;
+  margin-bottom: 8px;
+}
+
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+  from {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.divider {
+  border-top: 1px solid #eee;
+  margin: 1rem 0;
+}
+
+.skill-badge {
+  border: 1px solid #eee;
+  background-color: #f1f1f1;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  font-size: 0.875rem;
+  margin-right: 0.5rem;
+  margin-bottom: 0.75rem;
+  display: inline-block;
+}
+
+.review-info .star {
+  width: 25px;
+  height: 25px;
+  margin-bottom: 1rem;
+  display: flex;
+  margin-right: 0.5rem;
+}
+
+.review-info .star img {
+  width: 100%;
+  height: auto;
+  margin-right: 0.25rem;
+}
+#Contact p {
+  margin-bottom: 1.5rem;
+}
+#Contact a {
+  color: inherit;
+}
+#Contact .icons {
+  font-size: 1.5rem;
+  margin-right: 0.5rem;
+}
+
+.fw-600 {
+  font-weight: 700;
+  margin-right: 0.5rem;
+}
+
+.portfolio .m-pa-3 {
+  min-height: 101px;
 }
