Website done to live

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -33,11 +33,31 @@
   margin-right: 0.5rem;
 }
 
-.portfolio-download {
+.portfolio-preview {
   display: inline-block;
-  padding: 8px 10px;
+  padding: 3px 12px;
   background-color: #000;
   margin-left: 10px;
   border-radius: 0.25rem;
   color: #fff;
+  border: 1px solid #000;
+}
+.portfolio-preview:hover {
+  background-color: #333;
+  color: #fff;
+  border-color: #333;
+}
+.portfolio-download {
+  display: inline-block;
+  padding: 3px 12px;
+  background-color: #fff;
+  margin-left: 10px;
+  border-radius: 0.25rem;
+  color: #000;
+  border: 1px solid #000;
+}
+.portfolio-download:hover {
+  background-color: #333;
+  color: #fff;
+  border-color: #333;
 }
